{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 227,
  "lineage": "1f3bc539-a346-72f0-7f91-01dd88c1c1d6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ray_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e2c86481225d3c51",
            "arn": "arn:aws:ec2:us-east-1:287750019724:instance/i-0602cacf59843793c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0602cacf59843793c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03057e05e2f40e4d7",
            "private_dns": "ip-10-0-1-195.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.195",
            "public_dns": "ec2-18-209-12-166.compute-1.amazonaws.com",
            "public_ip": "18.209.12.166",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ee55459f9d1e568d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fd6478b87920ecfd",
            "tags": {
              "Name": "ray-infrastructure-ec2"
            },
            "tags_all": {
              "Name": "ray-infrastructure-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0113c45b42f8bb29e"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ray_ec2_sg",
            "aws_subnet.ray_public_subnet_1",
            "aws_vpc.ray_vpc",
            "data.aws_ami.ray_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ray_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287750019724:internet-gateway/igw-05b6621935d696cdc",
            "id": "igw-05b6621935d696cdc",
            "owner_id": "287750019724",
            "tags": {
              "Name": "ray-infrastructure-igw"
            },
            "tags_all": {
              "Name": "ray-infrastructure-igw"
            },
            "vpc_id": "vpc-05c7022c6aeffd177"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ray_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ray_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287750019724:route-table/rtb-0e7996b1cfdaae125",
            "id": "rtb-0e7996b1cfdaae125",
            "owner_id": "287750019724",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05b6621935d696cdc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ray-infrastructure-public-rt"
            },
            "tags_all": {
              "Name": "ray-infrastructure-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c7022c6aeffd177"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ray_igw",
            "aws_vpc.ray_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ray_public_rta_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c09890f093d648c7",
            "route_table_id": "rtb-0e7996b1cfdaae125",
            "subnet_id": "subnet-0fd6478b87920ecfd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ray_igw",
            "aws_route_table.ray_public_rt",
            "aws_subnet.ray_public_subnet_1",
            "aws_vpc.ray_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ray_public_rta_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f3ad78f36ba4d3a",
            "route_table_id": "rtb-0e7996b1cfdaae125",
            "subnet_id": "subnet-0c85ab3a3ed5f339c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ray_igw",
            "aws_route_table.ray_public_rt",
            "aws_subnet.ray_public_subnet_2",
            "aws_vpc.ray_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ray_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287750019724:security-group/sg-0113c45b42f8bb29e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0113c45b42f8bb29e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ray-infrastructure-ec2-sg20250812222415828600000001",
            "name_prefix": "ray-infrastructure-ec2-sg",
            "owner_id": "287750019724",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ray-infrastructure-ec2-sg"
            },
            "tags_all": {
              "Name": "ray-infrastructure-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c7022c6aeffd177"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ray_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ray_rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287750019724:security-group/sg-09c67b704c48f7ca5",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-09c67b704c48f7ca5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0113c45b42f8bb29e"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "ray-infrastructure-rds-sg20250812222417881600000003",
            "name_prefix": "ray-infrastructure-rds-sg",
            "owner_id": "287750019724",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ray-infrastructure-rds-sg"
            },
            "tags_all": {
              "Name": "ray-infrastructure-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c7022c6aeffd177"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ray_ec2_sg",
            "aws_vpc.ray_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ray_public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287750019724:subnet/subnet-0fd6478b87920ecfd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fd6478b87920ecfd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "287750019724",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ray-infrastructure-public-subnet-1"
            },
            "tags_all": {
              "Name": "ray-infrastructure-public-subnet-1"
            },
            "vpc_id": "vpc-05c7022c6aeffd177"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ray_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ray_public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287750019724:subnet/subnet-0c85ab3a3ed5f339c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c85ab3a3ed5f339c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "287750019724",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ray-infrastructure-public-subnet-2"
            },
            "tags_all": {
              "Name": "ray-infrastructure-public-subnet-2"
            },
            "vpc_id": "vpc-05c7022c6aeffd177"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ray_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ray_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287750019724:vpc/vpc-05c7022c6aeffd177",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08a315f3af0c9edc7",
            "default_route_table_id": "rtb-07ebd43d9a3a1a073",
            "default_security_group_id": "sg-00abf4876f74b049c",
            "dhcp_options_id": "dopt-0caf2e017f1904ef9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05c7022c6aeffd177",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07ebd43d9a3a1a073",
            "owner_id": "287750019724",
            "tags": {
              "Name": "ray-infrastructure-vpc"
            },
            "tags_all": {
              "Name": "ray-infrastructure-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}